src/css/general/_base.scss
*{
    box-sizing:border-box;
    line-height:140%;
}

section{
    header{
        padding: $base-padding 0;
    }
}

$ui-header-height: $size-10;


.ui-column{
    position:relative;
    background:$light-grey;

    .ui-column-header{
        @include block;
        height:$ui-header-height;
        background:inherit;
        box-shadow: 0px 3px 5px -5px rgba(0, 0, 0, 0.3);

        h2{
            font-size:$size-6;
        }
    }
}

@media #{$medium-plus}{
    .ui-column{
        margin-top:$ui-header-height;
        float:left;
        height:calc(100vh - #{$header-height} - #{$ui-header-height});
        overflow:auto;
    
        .ui-column-header{
            position:fixed;
            top:$header-height;
        }
    }
}

